@@ -1,3 +1,10 @@
+2002-10-09  Jacob Smullyan  <jsmullyan@wnyc.org>
+
+	* pylibs/vfs/ftpfs.py (FTPFile.connect): fatal bug -- left out
+	"self".  Oy.
+	(FtpFS.__init__): changed default port to ftplib.FTP_PORT rather
+	than 0.
+
 2002-10-08  Jacob Smullyan  <jsmullyan@wnyc.org>
 
 	* pylibs/xmlrpchandler.py (XMLRPCServer.handle_cgi): added support
